--- a/src/components/main/landing/index.scss
+++ b/src/components/main/landing/index.scss
@@ -28,9 +28,6 @@
             max-width: 9999px;
             float: left;
         }
-        @include mediaMin($desktop + 200) {
-            // padding-top: 0;
-        }
         
         // - - - - - - - - -
         // INNER TEXT WRAP
